--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.1.3",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-popup": "^0.8.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
